# osu-autosave

./: CMakeLists.txt  main.cpp  memory.cpp  memory.hpp  osu.cpp  osu.hpp  pattern.hpp  process.cpp  process.h  process.hpp  scan.hpp
